Bottom button changes. Still working on getting them aligned correctly.

--- a/html-and-css-prototype/CSS/stylesheet.css
+++ b/html-and-css-prototype/CSS/stylesheet.css
@@ -178,7 +178,7 @@ input::placeholder {
 	height: 30px;
 	font-size: 10px;
 	font-family: Avenir-Book;
-	float: left;
+	
 	width: 40%;
 }
 
@@ -191,6 +191,6 @@ input::placeholder {
 	height: 30px;
 	font-size: 10px;
 	font-family: Avenir-Book;
-	float: right;
+
 	width: 40%;
 }
